cortado-core/cortado/src/main/java/edu/utexas/cs/utopia/cortado/expression/parser/ExprParser.java
// Generated from edu/utexas/cs/utopia/cortado/expression/parser/Expr.g4 by ANTLR 4.9
package edu.utexas.cs.utopia.cortado.expression.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, UNARY_OP=2, BINARY_OP=3, NARY_OP=4, QUANT_KIND=5, INTEGER_CONST=6, 
		BOOL_CONST=7, CROSS_PROD=8, COLON=9, L_BRACKET=10, R_BRACKET=11, ARROW=12, 
		INT_TY=13, BOOL_TY=14, STRING_TY=15, IDENTIFIER=16, LPAR=17, RPAR=18, 
		DECL=19, WS=20;
	public static final int
		RULE_expr = 0, RULE_type = 1, RULE_primitive_type = 2, RULE_function_type = 3, 
		RULE_array_type = 4, RULE_constant_decl = 5, RULE_sexpr = 6, RULE_sexpr_types = 7, 
		RULE_unary_expr = 8, RULE_binary_expr = 9, RULE_nary_expr = 10, RULE_quant_expr = 11, 
		RULE_sexpr_arg = 12, RULE_atom = 13, RULE_prim_const = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "type", "primitive_type", "function_type", "array_type", "constant_decl", 
			"sexpr", "sexpr_types", "unary_expr", "binary_expr", "nary_expr", "quant_expr", 
			"sexpr_arg", "atom", "prim_const"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'neg'", null, null, null, null, null, "'x'", "':'", "'['", 
			"']'", "'->'", "'Int'", "'Bool'", "'String'", null, "'('", "')'", "'decl'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "UNARY_OP", "BINARY_OP", "NARY_OP", "QUANT_KIND", "INTEGER_CONST", 
			"BOOL_CONST", "CROSS_PROD", "COLON", "L_BRACKET", "R_BRACKET", "ARROW", 
			"INT_TY", "BOOL_TY", "STRING_TY", "IDENTIFIER", "LPAR", "RPAR", "DECL", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExprContext extends ParserRuleContext {
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public List<Constant_declContext> constant_decl() {
			return getRuleContexts(Constant_declContext.class);
		}
		public Constant_declContext constant_decl(int i) {
			return getRuleContext(Constant_declContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					constant_decl();
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			sexpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		try {
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TY:
			case BOOL_TY:
			case STRING_TY:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				primitive_type();
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				function_type();
				}
				break;
			case L_BRACKET:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				array_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typeContext extends ParserRuleContext {
		public Primitive_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_type; }
	 
		public Primitive_typeContext() { }
		public void copyFrom(Primitive_typeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BoolTyContext extends Primitive_typeContext {
		public TerminalNode BOOL_TY() { return getToken(ExprParser.BOOL_TY, 0); }
		public BoolTyContext(Primitive_typeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterBoolTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitBoolTy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitBoolTy(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringTyContext extends Primitive_typeContext {
		public TerminalNode STRING_TY() { return getToken(ExprParser.STRING_TY, 0); }
		public StringTyContext(Primitive_typeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterStringTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitStringTy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitStringTy(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntTyContext extends Primitive_typeContext {
		public TerminalNode INT_TY() { return getToken(ExprParser.INT_TY, 0); }
		public IntTyContext(Primitive_typeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterIntTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitIntTy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitIntTy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_typeContext primitive_type() throws RecognitionException {
		Primitive_typeContext _localctx = new Primitive_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primitive_type);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TY:
				_localctx = new IntTyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				match(INT_TY);
				}
				break;
			case BOOL_TY:
				_localctx = new BoolTyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				match(BOOL_TY);
				}
				break;
			case STRING_TY:
				_localctx = new StringTyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				match(STRING_TY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_typeContext extends ParserRuleContext {
		public Function_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_type; }
	 
		public Function_typeContext() { }
		public void copyFrom(Function_typeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NullFuncTyContext extends Function_typeContext {
		public TypeContext codomain;
		public TerminalNode LPAR() { return getToken(ExprParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ExprParser.RPAR, 0); }
		public TerminalNode ARROW() { return getToken(ExprParser.ARROW, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NullFuncTyContext(Function_typeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNullFuncTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNullFuncTy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitNullFuncTy(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NaryFuncTyContext extends Function_typeContext {
		public Primitive_typeContext primitive_type;
		public List<Primitive_typeContext> domain = new ArrayList<Primitive_typeContext>();
		public TypeContext codomain;
		public TerminalNode LPAR() { return getToken(ExprParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ExprParser.RPAR, 0); }
		public TerminalNode ARROW() { return getToken(ExprParser.ARROW, 0); }
		public List<Primitive_typeContext> primitive_type() {
			return getRuleContexts(Primitive_typeContext.class);
		}
		public Primitive_typeContext primitive_type(int i) {
			return getRuleContext(Primitive_typeContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> CROSS_PROD() { return getTokens(ExprParser.CROSS_PROD); }
		public TerminalNode CROSS_PROD(int i) {
			return getToken(ExprParser.CROSS_PROD, i);
		}
		public NaryFuncTyContext(Function_typeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNaryFuncTy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNaryFuncTy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitNaryFuncTy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_typeContext function_type() throws RecognitionException {
		Function_typeContext _localctx = new Function_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_type);
		int _la;
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new NullFuncTyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(LPAR);
				setState(49);
				match(RPAR);
				setState(50);
				match(ARROW);
				setState(51);
				((NullFuncTyContext)_localctx).codomain = type();
				}
				break;
			case 2:
				_localctx = new NaryFuncTyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				match(LPAR);
				setState(53);
				((NaryFuncTyContext)_localctx).primitive_type = primitive_type();
				((NaryFuncTyContext)_localctx).domain.add(((NaryFuncTyContext)_localctx).primitive_type);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CROSS_PROD) {
					{
					{
					setState(54);
					match(CROSS_PROD);
					setState(55);
					((NaryFuncTyContext)_localctx).primitive_type = primitive_type();
					((NaryFuncTyContext)_localctx).domain.add(((NaryFuncTyContext)_localctx).primitive_type);
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(61);
				match(RPAR);
				setState(62);
				match(ARROW);
				setState(63);
				((NaryFuncTyContext)_localctx).codomain = type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_typeContext extends ParserRuleContext {
		public Primitive_typeContext primitive_type;
		public List<Primitive_typeContext> domain = new ArrayList<Primitive_typeContext>();
		public TypeContext codomain;
		public TerminalNode L_BRACKET() { return getToken(ExprParser.L_BRACKET, 0); }
		public TerminalNode R_BRACKET() { return getToken(ExprParser.R_BRACKET, 0); }
		public TerminalNode ARROW() { return getToken(ExprParser.ARROW, 0); }
		public List<Primitive_typeContext> primitive_type() {
			return getRuleContexts(Primitive_typeContext.class);
		}
		public Primitive_typeContext primitive_type(int i) {
			return getRuleContext(Primitive_typeContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> CROSS_PROD() { return getTokens(ExprParser.CROSS_PROD); }
		public TerminalNode CROSS_PROD(int i) {
			return getToken(ExprParser.CROSS_PROD, i);
		}
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterArray_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitArray_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitArray_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_array_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(L_BRACKET);
			setState(68);
			((Array_typeContext)_localctx).primitive_type = primitive_type();
			((Array_typeContext)_localctx).domain.add(((Array_typeContext)_localctx).primitive_type);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CROSS_PROD) {
				{
				{
				setState(69);
				match(CROSS_PROD);
				setState(70);
				((Array_typeContext)_localctx).primitive_type = primitive_type();
				((Array_typeContext)_localctx).domain.add(((Array_typeContext)_localctx).primitive_type);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(R_BRACKET);
			setState(77);
			match(ARROW);
			setState(78);
			((Array_typeContext)_localctx).codomain = type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_declContext extends ParserRuleContext {
		public Token id;
		public TypeContext ty;
		public TerminalNode LPAR() { return getToken(ExprParser.LPAR, 0); }
		public TerminalNode COLON() { return getToken(ExprParser.COLON, 0); }
		public TerminalNode RPAR() { return getToken(ExprParser.RPAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Constant_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterConstant_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitConstant_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitConstant_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constant_declContext constant_decl() throws RecognitionException {
		Constant_declContext _localctx = new Constant_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(LPAR);
			setState(81);
			((Constant_declContext)_localctx).id = match(IDENTIFIER);
			setState(82);
			match(COLON);
			setState(83);
			((Constant_declContext)_localctx).ty = type();
			setState(84);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SexprContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(ExprParser.LPAR, 0); }
		public Sexpr_typesContext sexpr_types() {
			return getRuleContext(Sexpr_typesContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ExprParser.RPAR, 0); }
		public SexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterSexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitSexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SexprContext sexpr() throws RecognitionException {
		SexprContext _localctx = new SexprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(LPAR);
			setState(87);
			sexpr_types();
			setState(88);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sexpr_typesContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Unary_exprContext unary_expr() {
			return getRuleContext(Unary_exprContext.class,0);
		}
		public Binary_exprContext binary_expr() {
			return getRuleContext(Binary_exprContext.class,0);
		}
		public Nary_exprContext nary_expr() {
			return getRuleContext(Nary_exprContext.class,0);
		}
		public Quant_exprContext quant_expr() {
			return getRuleContext(Quant_exprContext.class,0);
		}
		public Sexpr_typesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sexpr_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterSexpr_types(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitSexpr_types(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSexpr_types(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sexpr_typesContext sexpr_types() throws RecognitionException {
		Sexpr_typesContext _localctx = new Sexpr_typesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sexpr_types);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				atom();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				unary_expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				binary_expr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				nary_expr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				quant_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_exprContext extends ParserRuleContext {
		public Unary_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_expr; }
	 
		public Unary_exprContext() { }
		public void copyFrom(Unary_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BuildinUnOpContext extends Unary_exprContext {
		public Token op;
		public Sexpr_argContext oper;
		public TerminalNode UNARY_OP() { return getToken(ExprParser.UNARY_OP, 0); }
		public Sexpr_argContext sexpr_arg() {
			return getRuleContext(Sexpr_argContext.class,0);
		}
		public BuildinUnOpContext(Unary_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterBuildinUnOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitBuildinUnOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitBuildinUnOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UninterpUnOpContext extends Unary_exprContext {
		public Token op;
		public Sexpr_argContext oper;
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public Sexpr_argContext sexpr_arg() {
			return getRuleContext(Sexpr_argContext.class,0);
		}
		public UninterpUnOpContext(Unary_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterUninterpUnOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitUninterpUnOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitUninterpUnOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unary_exprContext unary_expr() throws RecognitionException {
		Unary_exprContext _localctx = new Unary_exprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unary_expr);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNARY_OP:
				_localctx = new BuildinUnOpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				((BuildinUnOpContext)_localctx).op = match(UNARY_OP);
				setState(98);
				((BuildinUnOpContext)_localctx).oper = sexpr_arg();
				}
				break;
			case IDENTIFIER:
				_localctx = new UninterpUnOpContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				((UninterpUnOpContext)_localctx).op = match(IDENTIFIER);
				setState(100);
				((UninterpUnOpContext)_localctx).oper = sexpr_arg();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
